--- a/src/app/components/pages/main-layout/main-layout.component.html
+++ b/src/app/components/pages/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <div class="layout-box">
   <div class="top-bar">
-    <h1>Note Mate</h1>
+    <h1>What To-Do</h1>
   </div>
   <div class="page-content">
     <router-outlet></router-outlet>
